Added content for CoApp info pages

--- a/src/dynamic/reference/overview.html.md.ejs
+++ b/src/dynamic/reference/overview.html.md.ejs
@@ -17,11 +17,11 @@ That being said, a great deal of effort has gone into making CoApp do this as st
 In short, CoApp makes it easier to install and update software.  Any software.  We make no restrictions upon what can use CoApp to make the end-user experience better.
 
 #### That sounds suspicious.  What else is there to this?
-Ok, so the original reason we made CoApp was so that we (and everyone else) could have an easier time installing open source software (OSS) on Windows.  We have accomplished this task, but a mild side effect was that it worked really well for managing **ALL** types of software.
+The original purpose of CoApp was so that we (and everyone else) could have an easier time installing open source software (OSS) on Windows.  A mild side effect was that it also worked really well for managing **ALL** types of software.
 
 #### Ok, I think I'm almost convinced.  Where can I find software that uses CoApp?
 I'm glad you asked.  A list of packages that are readily available can be found [in the package repository][packages].
-Other packages and repositories may be available elsewhere on the internet, but this is the only one maintained and verified by the CoApp team.
+Other packages and repositories may be available elsewhere on the internet, but this is the only repository maintained and verified by the CoApp team.
 
 ----
 
@@ -29,11 +29,11 @@ Other packages and repositories may be available elsewhere on the internet, but 
 This is where I tell you about all of the cool things that CoApp is doing for you that you may or may not actually see when using it.  For the sake of the average reader, I'm going to try going light on the technical jargon.
 
 #### Benefits of CoApp Over Existing Software
-Well, the first item of note is that CoApp is the first ever (that we're aware of) package management system for Windows.  By that I mean that nothing else exists that will let so many varieties of software install and update this easily and seamlessly.
+The first item of note is that CoApp is the first ever (that we're aware of) package management system of its kind for Windows.  By that I mean that nothing else exists that will let so many varieties of software install and update this easily and seamlessly.
 
 With that little bit of pride out of the way, here's a list of things that CoApp provides:
 
-* Every CoApp software package has been digitally signed by the publisher, so you can always know who actually made the software available to you. ([details here][tech])
+* Every CoApp software package has been digitally signed by the publisher, so you always know who actually made the software available to you. ([details here][tech])
 
 * CoApp eliminates redundant files among various programs, removing program incompatibilities and saving you precious space that you can better use for photos, music, movies, and other important data.  ([details here][tech])
 
