turned feed back on

--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -25,5 +25,8 @@ order: 18
 
 <span class="label success">New!</span> **[Sys Admin Setup Guide](/reference/SysAdminSetup.html)** - Short walkthrough of a domain setup (Includes a reference for settings/rights administration)
 
+<span class="label success">New!</span> **[Side-by-side][reference:side-by-side]** - A techincal article on Windows Side-by-side (WinSxS)
+
+
 # Website/Docpad References
 <span class="label success">New!</span> **[Garrett-Flavored-Markdown](/reference/garrett-flavored-markdown.html)** Reference
