--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -23,11 +23,13 @@ This section contains tutorials about how you can help out with CoApp.
 <span class="label warning">Coming Soon!</span> [Building the CoApp developer tools](/developers/building-devtools.html)
 
 ### I want to help build CoApp Packages 
+<span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
 <span class="label warning">Coming Soon!</span> [The Shallow forking process](/developers/shallow-forking.html)
 <span class="label warning">Coming Soon!</span> [Using PTK to automate a build](/developers/ptk.html)
 <span class="label warning">Coming Soon!</span> [Creating an autopackage script for shallow forks](/developers/autopackage-forks.html)
 
 ### I want to build CoApp packages for my own software
+<span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
 <span class="label warning">Coming Soon!</span> [Creating an autopackage script for my own software](/developers/autopackage.html)
 <span class="label warning">Coming Soon!</span> [Publishing my own packages](/developers/publishing.html)
 <span class="label warning">Coming Soon!</span> [Publishing Updates to my packages](/developers/publish-updates.html)
