--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -5,11 +5,11 @@ order: 18
 --- 
 # Command References
 
-[Common command-line reference](/reference/cli.html) --  usage information that is common to all/most CoApp command line tools
-[Common property-sheet reference](/reference/propertysheet.html) --  information common to CoApp tools that use property sheets for
+[Common command-line reference](/reference/cli.html) -  usage information that is common to all/most CoApp command line tools
+[Common property-sheet reference](/reference/propertysheet.html) -  information common to CoApp tools that use property sheets for
 
 # CoApp
-[coapp.exe](/reference/coappcommandline.html) -- CoApp command line utility
+[coapp.exe](/reference/coappcommandline.html) - CoApp command line utility
 
 # CoApp Developer Tools
 **[pTk.exe](/reference/ptk.html)** - CoApp 'porting toolkit'
