--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -3,9 +3,11 @@ layout: 'default'
 title: 'Packages'
 order: 4
 rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
---- 
+---
+<script type="text/javascript" src="/scripts/iso8601.min.js"></script> 
 <script type="text/javascript" src="/scripts/jquery.jfeed.js"></script> 
-<script type="text/javascript" src="/scripts/feed.js"></script> 
+<script type="text/javascript" src="/scripts/feed.js"></script>
+<script type="text/javascript" src="/scripts/bootstrap/bootstrap-tabs.js"></script> 
 
 # Packages
 
