added basic forking instructions

--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -24,7 +24,7 @@ This section contains tutorials about how you can help out with CoApp.
 
 ### I want to help build CoApp Packages 
 <span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
-<span class="label warning">Coming Soon!</span> [The Shallow forking process](/developers/shallow-forking.html)
+<span class="label success">New!</span> [The Shallow forking process](/developers/shallow-forking.html)
 <span class="label warning">Coming Soon!</span> [Using PTK to automate a build](/developers/ptk.html)
 <span class="label warning">Coming Soon!</span> [Creating an autopackage script for shallow forks](/developers/autopackage-forks.html)
 
