added boilerplate for ptk

--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -32,6 +32,8 @@ This section contains tutorials about how you can help out with CoApp.
 ### I want to build CoApp packages for my own software
 <span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
 <span class="label success">New!</span> [Creating an autopackage script for my own software](/developers/autopackage.html)
+<span class="label success">New!</span> [Autopackage boilerplate file](/developers/boilerplate-autopkg.html)
+<span class="label success">New!</span> [.buildinfo boilerplate file](/developers/boilerplate-buildinfo.html)
 <span class="label warning">Coming Soon!</span> [Publishing my own packages](/developers/publishing.html)
 <span class="label warning">Coming Soon!</span> [Publishing Updates to my packages](/developers/publish-updates.html)
 
