--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -4,12 +4,13 @@ title: 'Packages'
 order: 4
 rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 ---
+<!--
 <script type="text/javascript" src="/scripts/iso8601.min.js"></script> 
 <script type="text/javascript" src="/scripts/jquery.jfeed.js"></script> 
 <script type="text/javascript" src="/scripts/feed.js"></script>
 <script type="text/javascript" src="/scripts/bootstrap/bootstrap-tabs.js"></script>
 <script type="text/javascript" src="/scripts/bootstrap/bootstrap-modal.js"></script>
-
+-->
 # Packages
 
 ## What is a CoApp package?
@@ -20,8 +21,12 @@ Another way to think about the packages produced by CoApp is that they are shall
 
 ## Packages Repository
 
-<p class="alert-message block-message success">
-    <b>Go-live Beta Feature!</b> The package feed listing is still in active development, but you can start using it now!
+<p class="alert-message block-message Warning">
+    <b>Attention!</b>
+    <br> The package feed is currently offline; we are making some changes to the format
+    <br> of the feed and packages, and should have packages and feeds back up by 
+    <br> Wednesday April 26th.
+    <br> <br> We look forward to you being able to do more testing then!
 </p>
 <noscript>
 <p class="alert-message warning">
