--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -23,29 +23,30 @@ This section contains tutorials about how you can help out with CoApp.
 <span class="label warning">Coming Soon!</span> [Building the CoApp developer tools](/developers/building-devtools.html)
 
 ### I want to help build CoApp Packages 
-<span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
-<span class="label success">New!</span> [The Shallow forking process](/developers/shallow-forking.html)
-<span class="label success">New!</span> [Creating Self-signed Certificates](/developers/self-signed-certs.html)
+**[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
+<span class="label success">New!</span> [Notes on AutoBuild](/developers/autobuild-notes.html)
+[The Shallow forking process](/developers/shallow-forking.html)
+[Creating Self-signed Certificates](/developers/self-signed-certs.html)
 <span class="label warning">Coming Soon!</span> [Using PTK to automate a build](/developers/ptk.html)
-<span class="label success">New!</span> [Creating an autopackage script for shallow forks](/developers/autopackage.html)
+[Creating an autopackage script for shallow forks](/developers/autopackage.html)
 
 ### I want to build CoApp packages for my own software
-<span class="label success">New!</span> **[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
-<span class="label success">New!</span> [Creating an autopackage script for my own software](/developers/autopackage.html)
-<span class="label success">New!</span> [Autopackage boilerplate file](/developers/boilerplate-autopkg.html)
-<span class="label success">New!</span> [.buildinfo boilerplate file](/developers/boilerplate-buildinfo.html)
+**[CoApp Packaging Best Practices](/developers/packagingbestpractices.html)** - Considerations for package developers and publishers
+[Creating an autopackage script for my own software](/developers/autopackage.html)
+[Autopackage boilerplate file](/developers/boilerplate-autopkg.html)
+[.buildinfo boilerplate file](/developers/boilerplate-buildinfo.html)
 <span class="label warning">Coming Soon!</span> [Publishing my own packages](/developers/publishing.html)
 <span class="label warning">Coming Soon!</span> [Publishing Updates to my packages](/developers/publish-updates.html)
 
 ### I can help write documentation or add to the website
-<span class="label success">New!</span> [Checking out the source for CoApp website](/developers/check-out-website.html)
-<span class="label success">New!</span> [Making modifications to CoApp website](/developers/modify-website.html)
-<span class="label success">New!</span> [Pushing patches back to CoApp website](/developers/push-patches.html)
-<span class="label success">New!</span> [Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video] <span class="label notice">Video</span> 
+[Checking out the source for CoApp website](/developers/check-out-website.html)
+[Making modifications to CoApp website](/developers/modify-website.html)
+[Pushing patches back to CoApp website](/developers/push-patches.html)
+[Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video] <span class="label notice">Video</span> 
 
 
 ### I've found some bugs in CoApp (or a package)
-<span class="label success">New!</span> [Filing bugs for CoApp on GitHub](/developers/filing-bugs.html)
+[Filing bugs for CoApp on GitHub](/developers/filing-bugs.html)
 <span class="label warning">Coming Soon!</span> [Filing bugs for CoApp package on GitHub](/developers/filing-package-bugs.html)
 
 
