Updated CoApp organization URL at GitHub

--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -105,7 +105,7 @@
                                 <li><a href="https://github.com/coapp/coapp/issues"><img style="margin-bottom:-3px;" src="/images/github.png" title="GitHub" > CoApp Bugtracker</a></li>
                                 <li><a href="https://github.com/coapp/devtools/issues"><img style="margin-bottom:-3px;" src="/images/github.png" title="GitHub" > DevTools Bugtracker</a></li>
                                 <li class="divider"></li>
-                                <li><a href="http://github.com/organizations/coapp"><img style="margin-bottom:-3px;" src="/images/github.png" title="GitHub" > CoApp GitHub Home</a></li>
+                                <li><a href="https://github.com/coapp"><img style="margin-bottom:-3px;" src="/images/github.png" title="GitHub" > CoApp GitHub Home</a></li>
                             </ul>
                         </li>
                         <% } else { %>
