Marked help topics as Coming Soon

--- a/src/dynamic/pages/help.html.md.ejs
+++ b/src/dynamic/pages/help.html.md.ejs
@@ -11,12 +11,12 @@ Don't panic, we're here to help figure out what went wrong (and fix it if we can
 
 
 ### Trouble Installing Packages
-[I'm getting an error during installation](/help/errors.html) 
-[I've installed a package, and it's not working](/help/packagefailure.html) 
-[I need to remove CoApp and the installed packages](/help/cleanup.html) 
+<span class="label warning">Coming Soon!</span> [I'm getting an error during installation](/help/errors.html) 
+<span class="label warning">Coming Soon!</span> [I've installed a package, and it's not working](/help/packagefailure.html) 
+<span class="label warning">Coming Soon!</span> [I need to remove CoApp and the installed packages](/help/cleanup.html) 
 
 ### Issues with using CoApp tools
-[The CoApp command line tool isn't working](/help/troubleshooting-cli.html) 
+<span class="label warning">Coming Soon!</span> [The CoApp command line tool isn't working](/help/troubleshooting-cli.html) 
 
 ### Need Additional Help?
 [Find us on IRC](/developers/irc.html)
