--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -9,14 +9,14 @@ order: 18
 [Common property-sheet reference](/reference/propertysheet.html) -  information common to CoApp tools that use property sheets for
 
 # CoApp
-[coapp.exe](/reference/coappcommandline.html) - CoApp command line utility
+<span class="label warning">Coming Soon!</span> [coapp.exe](/reference/coappcommandline.html) - CoApp command line utility
 
 # CoApp Developer Tools
 **[pTk.exe](/reference/ptk.html)** - CoApp 'porting toolkit'
 **[Autopackage.exe](/reference/autopackage.html)** - Creating packages for distribution
-**[Simplesigner.exe](/reference/simplesigner.html)** - Signing, Strongnaming and manipulating metadata in binaries
-**[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
-**[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
+<span class="label warning">Coming Soon!</span> **[Simplesigner.exe](/reference/simplesigner.html)** - Signing, Strongnaming and manipulating metadata in binaries
+<span class="label warning">Coming Soon!</span> **[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
+<span class="label warning">Coming Soon!</span> **[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
 
 # Technical References
 <span class="label success">New!</span> **[Overview of CoApp](/reference/overview.html)** - General information about CoApp
