--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -3,11 +3,30 @@ layout: 'default'
 title: 'Reference'
 order: 18
 --- 
-# Command References
 
-[Common command-line reference](/reference/cli.html) -  usage information that is common to all/most CoApp command line tools
-[Common property-sheet reference](/reference/propertysheet.html) -  information common to CoApp tools that use property sheets for
+If you are looking for tutorials on publishing NuGet packages for C/C++ using CoApp's tools, take a look at the [Tutorials](/pages/tutorials.html) page
 
+## Getting Started with the CoApp PowerShell Tools
+<span class="label success">New!</span> [Installing CoApp Developer Tools](/tutorials/installation.html) - Step-by-step instructions on installing and running the CoApp developer tools 
+
+## Detailed Powershell CmdLet help
+<span class="label warning">Soon</span> **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
+<span class="label warning">Soon</span> **[Set-CodeSignature](/reference/set-codesignature.html)** - Digitally signs a file (replaces signtool)
+<span class="label warning">Soon</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Shows the version of the CoApp tools
+<span class="label warning">Soon</span> **[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
+
+<span class="label warning">Soon</span> **[Invoke-Build](/reference/invoke-build.html)** - Build automation tool
+
+
+
+## CoApp Developer Tools File Formats
+<span class="label warning">Soon</span> [Property Sheet Format](/reference/overview.html) -  usage information that is common to all/most CoApp command line tools
+<span class="label warning">Soon</span> [Autopackage script format](/reference/packagescript.html) - Autopackage script files format and documentation
+<span class="label warning">Soon</span> [Buildinfo script format](/reference/buildscript.html) - Build automation script files format and documentation
+
+## 
+
+<!--
 # CoApp
 [coapp.exe](/reference/coappcommandline.html) - CoApp command line utility
 
@@ -27,6 +46,7 @@ order: 18
 
 <span class="label success">New!</span> **[Side-by-side][reference:side-by-side]** - A techincal article on Windows Side-by-side (WinSxS)
 
+-->
 
 # Website/Docpad References
-<span class="label success">New!</span> **[Garrett-Flavored-Markdown](/reference/garrett-flavored-markdown.html)** Reference
+**[Garrett-Flavored-Markdown](/reference/garrett-flavored-markdown.html)** Reference
