--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -92,7 +92,8 @@
 				<h3><a href="/index.html"><image style="margin:0; padding:0; position:absolute; top:2px; left:-2px;" src="/images/logo-small_32x32.png"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CoApp</a></h3>
 				<ul>
 					<% documents.enumerable().orderBy('order').where(function(each){ return each.url.indexOf('/pages') == 0;}).each(function(each) { %>  
-                        <% if (each.url == "/pages/developers.html" ) { %>
+                        <% if (each.url == "/pages/_old_developers.html" ) { %>
+                        <!--
                         <li class="dropdown" >
                             <a href="#" class="dropdown-toggle">Developers</a>
                             <ul class="dropdown-menu">
@@ -108,6 +109,7 @@
                                 <li><a href="https://github.com/coapp"><img style="margin-bottom:-3px;" src="/images/github.png" title="GitHub" > CoApp GitHub Home</a></li>
                             </ul>
                         </li>
+                        -->
                         <% } else { %>
                         <li typeof="sioc:Page" about="<%= each.url %>" class="<%= document.url == each.url ? 'active' : '' %>">
                             <a href="<%= each.url %>" property="dc:title"><%= each.title %></a>
