--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -20,8 +20,8 @@ If you are looking for tutorials on publishing NuGet packages for C/C++ using Co
 
 
 ## CoApp Developer Tools File Formats
-<span class="label warning">Soon</span> [Property Sheet Format](/reference/overview.html) -  usage information that is common to all/most CoApp command line tools
-<span class="label warning">Soon</span> [Autopackage script format](/reference/packagescript.html) - Autopackage script files format and documentation
+<span class="label success">New!</span> [Property Sheet Format](/reference/overview.html) -  usage information that is common to all/most CoApp command line tools
+<span class="label success">New!</span> [Autopackage script format](/reference/packagescript.html) - Autopackage script files format and documentation
 <span class="label warning">Soon</span> [Buildinfo script format](/reference/buildscript.html) - Build automation script files format and documentation
 
 ## 
