added more content

--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -7,22 +7,38 @@ order: 18
 If you are looking for tutorials on publishing NuGet packages for C/C++ using CoApp's tools, take a look at the [Tutorials](/pages/tutorials.html) page
 
 ## Getting Started with the CoApp PowerShell Tools
-<span class="label success">New!</span> [Installing CoApp Developer Tools](/tutorials/installation.html) - Step-by-step instructions on installing and running the CoApp developer tools 
+<span class="label success">New!</span> **[Installing CoApp Developer Tools](/tutorials/installation.html)** - Step-by-step instructions on installing and running the CoApp developer tools 
 
-## Detailed Powershell CmdLet help
-<span class="label warning">Soon</span> **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
+## Detailed CoApp Powershell Tools help
+<span class="label success">New!</span> **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
+<span class="label success">New!</span> **[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
+
+<span class="label warning">Soon</span> **[Publish-NuGetPackage](/reference/publish-nugetpackage.html)** - Uploads a NuGet package to the package repository
+<span class="label warning">Soon</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Displays the current version number of the CoApp PowerShell Tools
 <span class="label warning">Soon</span> **[Set-CodeSignature](/reference/set-codesignature.html)** - Digitally signs a file (replaces signtool)
-<span class="label warning">Soon</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Shows the version of the CoApp tools
-<span class="label warning">Soon</span> **[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
 
-<span class="label warning">Soon</span> **[Invoke-Build](/reference/invoke-build.html)** - Build automation tool
-
-
-
-## CoApp Developer Tools File Formats
-<span class="label success">New!</span> [Property Sheet Format](/reference/overview.html) -  usage information that is common to all/most CoApp command line tools
-<span class="label success">New!</span> [Autopackage script format](/reference/packagescript.html) - Autopackage script files format and documentation
+## CoApp File Formats
+<span class="label success">New!</span> **[Autopackage script format](/reference/packagescript.html)** - Autopackage script files format and documentation
+<span class="label success">New!</span> **[Property Sheet Format](/reference/overview.html)** -  usage information that is common to all/most CoApp command line tools
 <span class="label warning">Soon</span> [Buildinfo script format](/reference/buildscript.html) - Build automation script files format and documentation
+
+## CoApp Powershell CodeSigning Tools (not-yet-ready-for-primetime)
+<span class="label warning">Soon</span> **[Set-CodeSignature](/reference/set-codesignature.html)** - Digitally sign a file (binary, script or package)
+<span class="label warning">Soon</span> **[Set-PublicCertificate](/reference/set-publiccertificate.html)** - 
+<span class="label warning">Soon</span> **[Set-SignatureViaService](/reference/set-signatureviaservice.html)** - 
+
+## CoApp RESTable Powershell cmdlets (not-yet-ready-for-primetime)
+<span class="label warning">Soon</span> [Get-UploadLocation](/reference/get-uploadlocation.html) - Get an upload token from an Azure Blob Storage
+<span class="label warning">Soon</span> [Add-RestCmdlet](/reference/add-restcmdlet.html) - Add A RESTable cmdlet to to the service
+<span class="label warning">Soon</span> [Remove-RestCmdlet](/reference/remove-restcmdlet.html) - Remove A RESTable cmdlet to to the service
+<span class="label warning">Soon</span> [](/reference/set-defaultremoteservice.html) - 
+<span class="label warning">Soon</span> [Start-RestService](/reference/start-restservice.html) - Start the RESTable cmdlet service
+<span class="label warning">Soon</span> [Stop-RestService](/reference/stop-restservice.html) - Stops the RESTable cmdlet service
+
+## More CoApp Powershell Tools (not-yet-ready-for-primetime)
+<span class="label warning">Soon</span> [Copy-ItemEx](/reference/copy-itemex.html) - Build automation tool
+<span class="label warning">Soon</span> [Get-AzureCredentials](/reference/get-azurecredentials.html) - Build automation tool
+<span class="label warning">Soon</span> [Invoke-Build](/reference/invoke-build.html) - Build automation tool
 
 ## 
 
