--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -12,8 +12,8 @@ If you are looking for tutorials on publishing NuGet packages for C/C++ using Co
 ## Detailed CoApp Powershell Tools help
 <span class="label success">New!</span> **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
 <span class="label success">New!</span> **[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
+<span class="label success">New!</span> **[Publish-NuGetPackage](/reference/publish-nugetpackage.html)** - Uploads a NuGet package to the package repository
 
-<span class="label warning">Soon</span> **[Publish-NuGetPackage](/reference/publish-nugetpackage.html)** - Uploads a NuGet package to the package repository
 <span class="label warning">Soon</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Displays the current version number of the CoApp PowerShell Tools
 <span class="label warning">Soon</span> **[Set-CodeSignature](/reference/set-codesignature.html)** - Digitally signs a file (replaces signtool)
 
