updated releases page

--- a/src/dynamic/pages/releases.html.md.ejs
+++ b/src/dynamic/pages/releases.html.md.ejs
@@ -9,5 +9,35 @@ rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 
 ## CoApp PowerShell tools 
 
-Stable release: 
-Daily-build release: 
+### Stable release: 
+		http://downloads.coapp.org/files/CoApp.Tools.Powershell.msi
+
+### Daily-build 'unstable' release: 
+		http://downloads.coapp.org/files/Beta.CoApp.Tools.Powershell.msi
+
+	
+<span class="label notice">Hint</span>If you have the CoApp PowerShell tools installed, you can update to the latest stable version:
+
+``` powershell
+Update-CoAppTools -KillPowershells
+
+```
+
+Or update to the latest beta version:
+
+``` powershell
+Update-CoAppTools -KillPowershells -Beta
+
+```
+
+<hr/>
+## CoApp Package Manager
+
+<span class="label warning">Note!</span> Builds are not currently available for the CoApp package manager. They should be back in Mid-May 
+
+### Stable release: 
+		[Offline]
+
+### Daily-build 'unstable' release: 
+		[Offline]
+
