updated releases page

--- a/src/dynamic/pages/releases.html.md.ejs
+++ b/src/dynamic/pages/releases.html.md.ejs
@@ -9,11 +9,18 @@ rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 
 ## CoApp PowerShell tools 
 
-### Stable release: 
+The CoApp PowerShell tools are ready for use now.  
+
+We're still refining them, and will be constantly refreshing the bits as we go--we're constantly adding more scenarios and building better packages. 
+
+### Stable Beta release: 
 		http://downloads.coapp.org/files/CoApp.Tools.Powershell.msi
 
 ### Daily-build 'unstable' release: 
 		http://downloads.coapp.org/files/Beta.CoApp.Tools.Powershell.msi
+
+### To Report Bugs:
+		 https://github.com/coapp/coapp.powershell/issues
 
 	
 <span class="label notice">Hint</span>If you have the CoApp PowerShell tools installed, you can update to the latest stable version:
