updated help and styles

--- a/src/dynamic/styles/bootstrap/type.less
+++ b/src/dynamic/styles/bootstrap/type.less
@@ -9,6 +9,7 @@
 p {
   #font > .shorthand(normal,@basefont,@baseline);
   margin-bottom: @baseline / 2;
+  font-weight: 560;
   small {
     font-size: @basefont - 2;
     color: @grayLight;
@@ -31,14 +32,14 @@ h1 {
   font-size: 30px;
   line-height: @baseline * 2;
   small {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 h2 {
   font-size: 24px;
   line-height: @baseline * 2;
   small {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
 h3, h4, h5, h6 {
@@ -47,13 +48,13 @@ h3, h4, h5, h6 {
 h3 {
   font-size: 18px;
   small {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 h4 {
   font-size: 16px;
   small {
-    font-size: 12px;
+    font-size: 13px;
   }
 }
 h5 {
