--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -7,14 +7,14 @@ order: 18
 If you are looking for tutorials on publishing NuGet packages for C/C++ using CoApp's tools, take a look at the [Tutorials](/pages/tutorials.html) page
 
 ## Getting Started with the CoApp PowerShell Tools
-<span class="label success">New!</span> **[Installing CoApp Developer Tools](/tutorials/installation.html)** - Step-by-step instructions on installing and running the CoApp developer tools 
+**[Installing CoApp Developer Tools](/tutorials/installation.html)** - Step-by-step instructions on installing and running the CoApp developer tools 
 
 ## Detailed CoApp Powershell Tools help
-<span class="label success">New!</span> **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
-<span class="label success">New!</span> **[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
-<span class="label success">New!</span> **[Publish-NuGetPackage](/reference/publish-nugetpackage.html)** - Uploads a NuGet package to the package repository
+**[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
+**[Update-CoAppTools](/reference/update-coapptools.html)** - Download and installs an update to the CoApp tools
+**[Publish-NuGetPackage](/reference/publish-nugetpackage.html)** - Uploads a NuGet package to the package repository
 
-<span class="label warning">Soon</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Displays the current version number of the CoApp PowerShell Tools
+<span class="label success">New!</span> **[Show-CoAppToolsVersion](/reference/show-coapptoolsversion.html)** - Displays the current version number of the CoApp PowerShell Tools
 <span class="label warning">Soon</span> **[Set-CodeSignature](/reference/set-codesignature.html)** - Digitally signs a file (replaces signtool)
 
 ## CoApp File Formats
