Add tutorial "Consuming CoApp Packages" - How to Find and use CoApp packges. Add link on pages/reference in "Getting Started" section.

--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -8,6 +8,7 @@ If you are looking for tutorials on publishing NuGet packages for C/C++ using Co
 
 ## Getting Started with the CoApp PowerShell Tools
 **[Installing CoApp Developer Tools](/tutorials/installation.html)** - Step-by-step instructions on installing and running the CoApp developer tools 
+**[Consuming CoApp packages](/tutorials/consuming.html)** - How to find and use the packages.
 
 ## Detailed CoApp Powershell Tools help
 **[Write-NuGetPackage](/reference/write-nugetpackage.html)** - Writes out a NuGet native package
